--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Realistic Fake Location Map</title>
+  <title>8K Hybrid Realistic Map</title>
   <link rel="icon" href="assets/fav.png" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet.extra-markers/dist/css/leaflet.extra-markers.min.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
   <style>
     html, body {
       margin: 0;
@@ -68,9 +66,21 @@
       box-shadow: 0 4px 12px rgba(0,0,0,0.3);
       cursor: pointer;
     }
-    .leaflet-control-layers-expanded {
-      max-height: 250px;
-      overflow-y: auto;
+    .layer-controls {
+      position: fixed;
+      top: 80px;
+      left: 10px;
+      background: rgba(255,255,255,0.95);
+      padding: 10px;
+      border-radius: 10px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.2);
+      z-index: 1003;
+    }
+    .layer-controls label {
+      display: block;
+      margin-bottom: 5px;
+      font-size: 14px;
+      cursor: pointer;
     }
   </style>
 </head>
@@ -89,40 +99,52 @@
     <img src="assets/dark-icon.svg" id="darkModeBtn" class="icon" title="Dark Mode" />
   </div>
 
+  <div class="layer-controls">
+    <label><input type="radio" name="layer" value="streets" checked /> Street</label>
+    <label><input type="radio" name="layer" value="satellite" /> Satellite</label>
+    <label><input type="radio" name="layer" value="hybrid" /> Hybrid</label>
+    <label><input type="radio" name="layer" value="topo" /> Topo</label>
+  </div>
+
   <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.min.js"></script>
-  <script src="https://unpkg.com/leaflet.extra-markers/dist/js/leaflet.extra-markers.min.js"></script>
-  <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
   <script>
-    const map = L.map('map', {
-      center: [25.276987, 55.296249],
-      zoom: 18,
-      zoomControl: true,
-      maxZoom: 22
-    });
+    const map = L.map('map').setView([25.276987, 55.296249], 18);
 
-    const key = "VcSgtSTkXfCbU3n3RqBO";
-
-    const baseLayers = {
-      "🛣 Street": L.tileLayer(`https://api.maptiler.com/maps/streets/{z}/{x}/{y}.png?key=${key}`, { tileSize: 512, zoomOffset: -1 }),
-      "🛰 Satellite": L.tileLayer(`https://api.maptiler.com/maps/hybrid/{z}/{x}/{y}.jpg?key=${key}`, { tileSize: 512, zoomOffset: -1 }),
-      "🌍 Topographic": L.tileLayer(`https://api.maptiler.com/maps/topo/{z}/{x}/{y}.png?key=${key}`, { tileSize: 512, zoomOffset: -1 }),
-      "🗺 Hybrid": L.tileLayer(`https://api.maptiler.com/maps/hybrid/{z}/{x}/{y}.jpg?key=${key}`, { tileSize: 512, zoomOffset: -1 }),
-      "🚦 Traffic": L.tileLayer(`https://api.maptiler.com/tiles/traffic/{z}/{x}/{y}.png?key=${key}`, { tileSize: 512, zoomOffset: -1 })
+    const layers = {
+      streets: L.tileLayer('https://api.maptiler.com/maps/streets/{z}/{x}/{y}.png?key=VcSgtSTkXfCbU3n3RqBO', {
+        tileSize: 512,
+        zoomOffset: -1
+      }),
+      satellite: L.tileLayer('https://api.maptiler.com/tiles/satellite/{z}/{x}/{y}.jpg?key=VcSgtSTkXfCbU3n3RqBO', {
+        tileSize: 512,
+        zoomOffset: -1
+      }),
+      hybrid: L.tileLayer('https://api.maptiler.com/maps/hybrid/{z}/{x}/{y}.jpg?key=VcSgtSTkXfCbU3n3RqBO', {
+        tileSize: 512,
+        zoomOffset: -1
+      }),
+      topo: L.tileLayer('https://api.maptiler.com/maps/topo/{z}/{x}/{y}.png?key=VcSgtSTkXfCbU3n3RqBO', {
+        tileSize: 512,
+        zoomOffset: -1
+      })
     };
 
-    baseLayers["🛣 Street"].addTo(map);
-    L.control.layers(baseLayers).addTo(map);
-
+    let currentLayer = layers.hybrid.addTo(map);
     let fakeMarker = L.marker([25.276987, 55.296249]).addTo(map);
 
-    document.getElementById('darkModeBtn').onclick = () => document.body.classList.toggle('dark-mode');
+    document.querySelectorAll('input[name="layer"]').forEach(input => {
+      input.addEventListener('change', e => {
+        map.removeLayer(currentLayer);
+        currentLayer = layers[e.target.value].addTo(map);
+      });
+    });
 
     document.getElementById('locateBtn').onclick = () => {
       navigator.geolocation.getCurrentPosition(pos => {
         const { latitude, longitude } = pos.coords;
         L.marker([latitude, longitude]).addTo(map).bindPopup("You are here").openPopup();
-        map.setView([latitude, longitude], 19);
+        map.setView([latitude, longitude], 18);
       }, () => alert("Permission denied"));
     };
 
@@ -138,6 +160,10 @@
       } else {
         alert("Place not found");
       }
+    };
+
+    document.getElementById('darkModeBtn').onclick = () => {
+      document.body.classList.toggle('dark-mode');
     };
   </script>
 </body>
