--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>8K Hybrid Realistic Map</title>
+  <title>Realistic Fake Location Map</title>
   <link rel="icon" href="assets/fav.png" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.css" />
@@ -48,6 +48,25 @@
       cursor: pointer;
       font-weight: bold;
     }
+    .autocomplete-container {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 100%;
+      background: white;
+      border: 1px solid #ccc;
+      z-index: 999;
+      max-height: 200px;
+      overflow-y: auto;
+      border-radius: 4px;
+    }
+    .autocomplete-container .suggestion {
+      padding: 8px 10px;
+      cursor: pointer;
+    }
+    .autocomplete-container .suggestion:hover {
+      background-color: #f0f0f0;
+    }
     .map-ui {
       position: fixed;
       bottom: 20px;
@@ -64,22 +83,6 @@
       background: white;
       border-radius: 50%;
       box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-      cursor: pointer;
-    }
-    .layer-controls {
-      position: fixed;
-      top: 80px;
-      left: 10px;
-      background: rgba(255,255,255,0.95);
-      padding: 10px;
-      border-radius: 10px;
-      box-shadow: 0 0 8px rgba(0,0,0,0.2);
-      z-index: 1003;
-    }
-    .layer-controls label {
-      display: block;
-      margin-bottom: 5px;
-      font-size: 14px;
       cursor: pointer;
     }
   </style>
@@ -99,55 +102,23 @@
     <img src="assets/dark-icon.svg" id="darkModeBtn" class="icon" title="Dark Mode" />
   </div>
 
-  <div class="layer-controls">
-    <label><input type="radio" name="layer" value="streets" checked /> Street</label>
-    <label><input type="radio" name="layer" value="satellite" /> Satellite</label>
-    <label><input type="radio" name="layer" value="hybrid" /> Hybrid</label>
-    <label><input type="radio" name="layer" value="topo" /> Topo</label>
-  </div>
-
   <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.min.js"></script>
   <script>
-    const map = L.map('map').setView([25.276987, 55.296249], 18);
+    const map = L.map('map').setView([25.276987, 55.296249], 13);
+    const tileLayer = L.tileLayer('https://api.maptiler.com/maps/streets/{z}/{x}/{y}.png?key=VcSgtSTkXfCbU3n3RqBO', {
+      tileSize: 512,
+      zoomOffset: -1,
+      attribution: '&copy; MapTiler & OpenStreetMap contributors'
+    }).addTo(map);
 
-    const layers = {
-      streets: L.tileLayer('https://api.maptiler.com/maps/streets/{z}/{x}/{y}.png?key=VcSgtSTkXfCbU3n3RqBO', {
-        tileSize: 512,
-        zoomOffset: -1
-      }),
-      satellite: L.tileLayer('https://api.maptiler.com/tiles/satellite/{z}/{x}/{y}.jpg?key=VcSgtSTkXfCbU3n3RqBO', {
-        tileSize: 512,
-        zoomOffset: -1
-      }),
-      hybrid: L.tileLayer('https://api.maptiler.com/maps/hybrid/{z}/{x}/{y}.jpg?key=VcSgtSTkXfCbU3n3RqBO', {
-        tileSize: 512,
-        zoomOffset: -1
-      }),
-      topo: L.tileLayer('https://api.maptiler.com/maps/topo/{z}/{x}/{y}.png?key=VcSgtSTkXfCbU3n3RqBO', {
-        tileSize: 512,
-        zoomOffset: -1
-      })
-    };
-
-    let currentLayer = layers.hybrid.addTo(map);
     let fakeMarker = L.marker([25.276987, 55.296249]).addTo(map);
 
-    document.querySelectorAll('input[name="layer"]').forEach(input => {
-      input.addEventListener('change', e => {
-        map.removeLayer(currentLayer);
-        currentLayer = layers[e.target.value].addTo(map);
-      });
-    });
+    // Dark Mode toggle
+    const darkBtn = document.getElementById('darkModeBtn');
+    darkBtn.onclick = () => document.body.classList.toggle('dark-mode');
 
-    document.getElementById('locateBtn').onclick = () => {
-      navigator.geolocation.getCurrentPosition(pos => {
-        const { latitude, longitude } = pos.coords;
-        L.marker([latitude, longitude]).addTo(map).bindPopup("You are here").openPopup();
-        map.setView([latitude, longitude], 18);
-      }, () => alert("Permission denied"));
-    };
-
+    // Search
     document.getElementById('searchBtn').onclick = async () => {
       const place = document.getElementById('searchInput').value;
       if (!place) return;
@@ -155,15 +126,32 @@
       const data = await res.json();
       if (data.length > 0) {
         const { lat, lon } = data[0];
-        map.setView([lat, lon], 18);
+        map.setView([lat, lon], 15);
         fakeMarker.setLatLng([lat, lon]);
       } else {
         alert("Place not found");
       }
     };
 
-    document.getElementById('darkModeBtn').onclick = () => {
-      document.body.classList.toggle('dark-mode');
+    // Reverse geocode function
+    async function reverseGeocode(lat, lon) {
+      const res = await fetch(`https://nominatim.openstreetmap.org/reverse?format=jsonv2&lat=${lat}&lon=${lon}`);
+      const data = await res.json();
+      return data.display_name || "Unknown location";
+    }
+
+    // Geolocation + move to real location
+    document.getElementById('locateBtn').onclick = async () => {
+      navigator.geolocation.getCurrentPosition(async pos => {
+        const { latitude, longitude } = pos.coords;
+        const place = await reverseGeocode(latitude, longitude);
+
+        if (fakeMarker) map.removeLayer(fakeMarker);
+        const realMarker = L.marker([latitude, longitude]).addTo(map).bindPopup(`📍 You are here: ${place}`).openPopup();
+        map.setView([latitude, longitude], 17);
+      }, err => {
+        alert("Geolocation failed or denied.");
+      });
     };
   </script>
 </body>
